--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -51,6 +51,8 @@ jobs:
             buildfarm-client:alpine \
               --test \
               --config ${{ matrix.builder }}.conf \
+              --skip-steps=recovery-check \
+              --skip-suites=recovery \
               --delay-check
               # TODO: Remove --delay-check once this is fixed:
               # https://www.postgresql.org/message-id/flat/fddd1cd6-dc16-40a2-9eb5-d7fef2101488%40technowledgy.de
