--- a/autoconf.conf
+++ b/autoconf.conf
@@ -6,7 +6,9 @@ $PGGBuild::conf{secret} = $ENV{AUTOCONF_SECRET} // $PGBuild::conf{secret};
 $PGBuild::conf{make_jobs} = 2;
 
 push(@{$PGBuild::conf{config_opts}}, (
+	'--enable-tap-tests',
 	'--with-pam',
+	'--with-ssl=openssl',
 	'--with-uuid=ossp'
 ));
 
