--- a/meson.conf
+++ b/meson.conf
@@ -9,6 +9,7 @@ $PGBuild::conf{meson_jobs} = 2;
 push(@{$PGBuild::conf{meson_opts}}, (
 	'-Dlz4=enabled',
 	'-Dpam=enabled',
+	'-Dtap_tests=enabled',
 	'-Duuid=ossp',
 	'-Dzstd=enabled'
 ));
