--- a/shared.conf
+++ b/shared.conf
@@ -11,4 +11,6 @@ $PGBuild::conf{mail_eventsalerts} = {
 	all => [$ENV{BUILDFARM_EMAIL_ALL}]
 };
 
+@PGBuild::conf{build_env}->{PG_TEST_EXTRA} = 'ssl kerberos';
+
 1;
