Build --with-icu

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -9,6 +9,7 @@ $PGBuild::conf{make_jobs} = 2;
 
 push(@{$PGBuild::conf{config_opts}}, (
 	'--enable-tap-tests',
+	'--with-icu',
 	'--with-llvm',
 	'--with-pam',
 	'--with-ssl=openssl',
@@ -34,10 +35,5 @@ if ($branch eq 'HEAD' || $branch ge 'REL_18') {
 # src/port/strerror.c:72:(.text+0x260): undefined reference to `libintl_gettext'
 # ld: src/port/strerror.c:72:(.text+0x2d8): undefined reference to `libintl_gettext'
 @{$PGBuild::conf{config_opts}} = grep {!/--enable-nls/} @{$PGBuild::conf{config_opts}};
-
-# TODO: Currently failing two tests:
-# initdb/001_initdb
-# icu / icu/010_database
-push(@{$PGBuild::conf{config_opts}}, "--without-icu");
 
 1;
