--- a/meson.conf
+++ b/meson.conf
@@ -9,6 +9,7 @@ $PGBuild::conf{meson_jobs} = 2;
 push(@{$PGBuild::conf{meson_opts}}, (
 	'-DPG_TEST_EXTRA=ssl kerberos ldap oauth libpq_encryption load_balance',
 	'-Ddebug=true',
+	'-Dicu=enabled',
 	'-Dllvm=enabled',
 	'-Dlz4=enabled',
 	'-Dpam=enabled',
@@ -40,10 +41,5 @@ $PGBuild::conf{build_env}->{NSS_WRAPPER_GROUP} = $ENV{NSS_WRAPPER_GROUP};
 # src/port/strerror.c:72:(.text+0x260): undefined reference to `libintl_gettext'
 # ld: src/port/strerror.c:72:(.text+0x2d8): undefined reference to `libintl_gettext'
 @{$PGBuild::conf{meson_opts}} = grep {!/-Dnls=enabled/} @{$PGBuild::conf{meson_opts}};
-
-# TODO: Currently failing two tests:
-# initdb/001_initdb
-# icu / icu/010_database
-push(@{$PGBuild::conf{meson_opts}}, '-Dicu=disabled');
 
 1;
