Use libedit instead of readline

--- a/meson.conf
+++ b/meson.conf
@@ -13,6 +13,9 @@ push(@{@PGBuild::conf{meson_opts}}, (
 	'-Dzstd=enabled'
 ));
 
+# TODO: This should not be required, fix upstream.
+push(@{@PGBuild::conf{meson_opts}}, '-Dlibedit_preferred=true');
+
 # TODO: Building with --enable-nls currently fails with:
 # ld: ../../src/port/libpgport.a(strerror.o): in function `pg_strerror_r':
 # src/port/strerror.c:72:(.text+0x260): undefined reference to `libintl_gettext'
