--- a/autoconf.conf
+++ b/autoconf.conf
@@ -5,6 +5,10 @@ require 'shared.conf';
 
 @PGBuild::conf{make_jobs} = 2;
 
+push(@{@PGBuild::conf{config_opts}}, (
+	'--with-pam'
+));
+
 # TODO: Building with --enable-nls currently fails with:
 # ld: ../../src/port/libpgport.a(strerror.o): in function `pg_strerror_r':
 # src/port/strerror.c:72:(.text+0x260): undefined reference to `libintl_gettext'
