--- a/autoconf.conf
+++ b/autoconf.conf
@@ -6,7 +6,8 @@ require 'shared.conf';
 @PGBuild::conf{make_jobs} = 2;
 
 push(@{@PGBuild::conf{config_opts}}, (
-	'--with-pam'
+	'--with-pam',
+	'--with-uuid=ossp'
 ));
 
 # TODO: Building with --enable-nls currently fails with:
