--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -51,9 +51,7 @@ jobs:
             buildfarm-client:alpine \
               --test \
               --from-source /mnt/source \
-              --config ${{ matrix.builder }}.conf \
-              --skip-steps=recovery-check \
-              --skip-suites=recovery
+              --config ${{ matrix.builder }}.conf
       - uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
         if: always()
         with:
@@ -64,4 +62,3 @@ jobs:
         if: github.ref == 'refs/heads/main'
         with:
           path: build
-          key: ${{ steps.restore-cache.outputs.cache-primary-key }}
