Use $ instead of @ to access hash elements

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -1,11 +1,11 @@
 require 'shared.conf';
 
-@PGBuild::conf{animal} = $ENV{AUTOCONF_ANIMAL} // @PGBuild::conf{animal};
-@PGBuild::conf{secret} = $ENV{AUTOCONF_SECRET} // @PGBuild::conf{secret};
+$PGBuild::conf{animal} = $ENV{AUTOCONF_ANIMAL} // $PGBuild::conf{animal};
+$PGGBuild::conf{secret} = $ENV{AUTOCONF_SECRET} // $PGBuild::conf{secret};
 
-@PGBuild::conf{make_jobs} = 2;
+$PGBuild::conf{make_jobs} = 2;
 
-push(@{@PGBuild::conf{config_opts}}, (
+push(@{$PGBuild::conf{config_opts}}, (
 	'--with-pam',
 	'--with-uuid=ossp'
 ));
@@ -14,11 +14,11 @@ push(@{@PGBuild::conf{config_opts}}, (
 # ld: ../../src/port/libpgport.a(strerror.o): in function `pg_strerror_r':
 # src/port/strerror.c:72:(.text+0x260): undefined reference to `libintl_gettext'
 # ld: src/port/strerror.c:72:(.text+0x2d8): undefined reference to `libintl_gettext'
-push(@{@PGBuild::conf{config_opts}}, "--disable-nls");
+push(@{$PGBuild::conf{config_opts}}, "--disable-nls");
 
 # TODO: Currently failing two tests:
 # initdb/001_initdb
 # icu / icu/010_database
-push(@{@PGBuild::conf{config_opts}}, "--without-icu");
+push(@{$PGBuild::conf{config_opts}}, "--without-icu");
 
 1;
