--- a/meson.conf
+++ b/meson.conf
@@ -1,12 +1,12 @@
 require 'shared.conf';
 
-@PGBuild::conf{animal} = $ENV{MESON_ANIMAL} // @PGBuild::conf{animal};
-@PGBuild::conf{secret} = $ENV{MESON_SECRET} // @PGBuild::conf{secret};
+$PGBuild::conf{animal} = $ENV{MESON_ANIMAL} // $PGBuild::conf{animal};
+$PGBuild::conf{secret} = $ENV{MESON_SECRET} // $PGBuild::conf{secret};
 
-@PGBuild::conf{using_meson} = true;
-@PGBuild::conf{meson_jobs} = 2;
+$PGBuild::conf{using_meson} = true;
+$PGBuild::conf{meson_jobs} = 2;
 
-push(@{@PGBuild::conf{meson_opts}}, (
+push(@{$PGBuild::conf{meson_opts}}, (
 	'-Dlz4=enabled',
 	'-Dpam=enabled',
 	'-Duuid=ossp',
@@ -14,17 +14,17 @@ push(@{@PGBuild::conf{meson_opts}}, (
 ));
 
 # TODO: This should not be required, fix upstream.
-push(@{@PGBuild::conf{meson_opts}}, '-Dlibedit_preferred=true');
+push(@{$PGBuild::conf{meson_opts}}, '-Dlibedit_preferred=true');
 
 # TODO: Building with --enable-nls currently fails with:
 # ld: ../../src/port/libpgport.a(strerror.o): in function `pg_strerror_r':
 # src/port/strerror.c:72:(.text+0x260): undefined reference to `libintl_gettext'
 # ld: src/port/strerror.c:72:(.text+0x2d8): undefined reference to `libintl_gettext'
-push(@{@PGBuild::conf{meson_opts}}, '-Dnls=disabled');
+push(@{$PGBuild::conf{meson_opts}}, '-Dnls=disabled');
 
 # TODO: Currently failing two tests:
 # initdb/001_initdb
 # icu / icu/010_database
-push(@{@PGBuild::conf{meson_opts}}, '-Dicu=disabled');
+push(@{$PGBuild::conf{meson_opts}}, '-Dicu=disabled');
 
 1;
