--- a/shared.conf
+++ b/shared.conf
@@ -1,12 +1,12 @@
 require 'build-farm.conf.sample';
 
-@PGBuild::conf{build_root} = '/home/alpine';
+$PGBuild::conf{build_root} = '/home/alpine';
 
-@PGBuild::conf{alerts} = {
+$PGBuild::conf{alerts} = {
 	HEAD => { alert_after => 9, alert_every => 24 }
 };
 
-@PGBuild::conf{mail_eventsalerts} = {
+$PGBuild::conf{mail_eventsalerts} = {
 	all => [$ENV{BUILDFARM_EMAIL_ALL}]
 };
 
