Run ldap TAP tests

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -5,7 +5,7 @@ $PGBuild::conf{secret} = $ENV{SECRET} // $PGBuild::conf{secret};
 
 $PGBuild::conf{make_jobs} = 2;
 
-@PGBuild::conf{build_env}->{PG_TEST_EXTRA} = 'ssl kerberos';
+@PGBuild::conf{build_env}->{PG_TEST_EXTRA} = 'ssl kerberos ldap';
 
 push(@{$PGBuild::conf{config_opts}}, (
 	'--enable-tap-tests',
