Reduce caching to avoid exceeding available cache size
GitHub limits public repositories to 10GB of actions cache, whih is
easily filled with caches from pull requests. test- caches will only
be saved on the main branch now, but can still be restored in pull
requests. Docker builds don't use caching anymore, they are fast
enough anyway.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       - uses: raven-actions/actionlint@789059c543ab20522fb3e7240794e13b0f69ad67 # v1.0.3
+        with:
+          cache: false
 
 
   hadolint:
