Use GitHub mirror for checkout
Resolves #15

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -38,15 +38,21 @@ jobs:
           load: true
           push: false
           tags: buildfarm-client:alpine
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          repository: postgres/postgres
+          ref: ${{ matrix.branch != 'HEAD' && matrix.branch || '' }}
+          path: source
       - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
-          path: buildroot
+          path: build
           key: run-alpine-${{ matrix.builder }}-${{ matrix.branch }}
       - name: Run buildfarm client
         run: |
-          mkdir -p buildroot
+          mkdir -p build
           docker run --rm \
-            -v ./buildroot:/home/alpine \
+            -v ./build:/mnt/build \
+            -v ./source:/mnt/source \
             -u "$(id -u):$(id -g)" \
             buildfarm-client:alpine \
               --test \
