--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,16 +32,21 @@ jobs:
           load: true
           push: false
           tags: buildfarm-client:alpine
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          repository: postgres/postgres
+          path: source
       - uses: actions/cache/restore@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         id: restore-cache
         with:
-          path: buildroot
+          path: build
           key: test-alpine-${{ matrix.builder }}
       - name: Test ${{ matrix.builder }}.conf
         run: |
-          mkdir -p buildroot
+          mkdir -p build
           docker run --rm \
-            -v ./buildroot:/home/alpine \
+            -v ./build:/mnt/build \
+            -v ./source:/mnt/source \
             -u "$(id -u):$(id -g)" \
             buildfarm-client:alpine \
               --test \
@@ -52,5 +57,5 @@ jobs:
       - uses: actions/cache/save@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         if: github.ref == 'refs/heads/main'
         with:
-          path: buildroot
+          path: build
           key: ${{ steps.restore-cache.outputs.cache-primary-key }}
