--- a/shared.conf
+++ b/shared.conf
@@ -1,6 +1,7 @@
 require 'build-farm.conf.sample';
 
-$PGBuild::conf{build_root} = '/home/alpine';
+$PGBuild::conf{build_root} = '/mnt/build';
+$PGBuild::conf{use_vpath} = true;
 
 $PGBuild::conf{alerts} = {
 	HEAD => { alert_after => 9, alert_every => 24 }
