--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -61,3 +61,8 @@ jobs:
               ${{ matrix.branch }}
               # TODO: Remove --delay-check once this is fixed:
               # https://www.postgresql.org/message-id/flat/fddd1cd6-dc16-40a2-9eb5-d7fef2101488%40technowledgy.de
+      - uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
+        with:
+          name: ${{ matrix.builder }}-logs
+          path: build/**/*.log
+          if-no-files-found: error
