Use better fallback animal names than CHANGEME for testing

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -1,6 +1,6 @@
 require 'shared.conf';
 
-$PGBuild::conf{animal} = $ENV{AUTOCONF_ANIMAL} // $PGBuild::conf{animal};
+$PGBuild::conf{animal} = $ENV{AUTOCONF_ANIMAL} // 'autoconf';
 $PGGBuild::conf{secret} = $ENV{AUTOCONF_SECRET} // $PGBuild::conf{secret};
 
 $PGBuild::conf{make_jobs} = 2;
