--- a/meson.conf
+++ b/meson.conf
@@ -1,6 +1,6 @@
 require 'shared.conf';
 
-$PGBuild::conf{animal} = $ENV{MESON_ANIMAL} // $PGBuild::conf{animal};
+$PGBuild::conf{animal} = $ENV{MESON_ANIMAL} // 'meson';
 $PGBuild::conf{secret} = $ENV{MESON_SECRET} // $PGBuild::conf{secret};
 
 $PGBuild::conf{using_meson} = true;
