--- a/autoconf.conf
+++ b/autoconf.conf
@@ -7,6 +7,7 @@ $PGBuild::conf{make_jobs} = 2;
 
 push(@{$PGBuild::conf{config_opts}}, (
 	'--enable-tap-tests',
+	'--with-llvm',
 	'--with-pam',
 	'--with-ssl=openssl',
 	'--with-uuid=ossp'
