--- a/meson.conf
+++ b/meson.conf
@@ -8,6 +8,7 @@ $PGBuild::conf{meson_jobs} = 2;
 
 push(@{$PGBuild::conf{meson_opts}}, (
 	'-Dlz4=enabled',
+	'-Dllvm=enabled',
 	'-Dpam=enabled',
 	'-Dtap_tests=enabled',
 	'-Duuid=ossp',
