Use the shallow git clone in CI
Forgot this in 2b347bc8

--- a/meson.conf
+++ b/meson.conf
@@ -15,6 +15,10 @@ push(@{$PGBuild::conf{meson_opts}}, (
 	'-Dzstd=enabled'
 ));
 
+$PGBuild::conf{build_env}->{LD_PRELOAD} = $ENV{LD_PRELOAD};
+$PGBuild::conf{build_env}->{NSS_WRAPPER_PASSWD} = $ENV{NSS_WRAPPER_PASSWD};
+$PGBuild::conf{build_env}->{NSS_WRAPPER_GROUP} = $ENV{NSS_WRAPPER_GROUP};
+
 # TODO: This should not be required, fix upstream.
 push(@{$PGBuild::conf{meson_opts}}, '-Dlibedit_preferred=true');
 
