--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -56,6 +56,7 @@ jobs:
             -u "$(id -u):$(id -g)" \
             buildfarm-client:alpine \
               --test \
+              --from-source /mnt/source \
               --config ${{ matrix.builder }}.conf \
               --skip-steps=recovery-check \
               --skip-suites=recovery \
