--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,6 +50,7 @@ jobs:
             -u "$(id -u):$(id -g)" \
             buildfarm-client:alpine \
               --test \
+              --from-source /mnt/source \
               --config ${{ matrix.builder }}.conf \
               --skip-steps=recovery-check \
               --skip-suites=recovery \
