Avoid using --from-source
This sets --nosend --nostatus implicitly.

--- a/shared.conf
+++ b/shared.conf
@@ -1,5 +1,8 @@
 require 'build-farm.conf.sample';
 
+$PGBuild::conf{git_keep_mirror} = 0;
+$PGBuild::conf{scmrepo} = '/mnt/source';
+
 $PGBuild::conf{build_root} = '/mnt/build';
 $PGBuild::conf{use_vpath} = true;
 
