Enable extra tests on meson as well

--- a/meson.conf
+++ b/meson.conf
@@ -10,6 +10,7 @@ push(@{$PGBuild::conf{meson_opts}}, (
 	'-Dlz4=enabled',
 	'-Dllvm=enabled',
 	'-Dpam=enabled',
+	'-DPG_TEST_EXTRA=ssl kerberos',
 	'-Dtap_tests=enabled',
 	'-Duuid=ossp',
 	'-Dzstd=enabled'
