--- a/autoconf.conf
+++ b/autoconf.conf
@@ -5,6 +5,8 @@ $PGBuild::conf{secret} = $ENV{SECRET} // $PGBuild::conf{secret};
 
 $PGBuild::conf{make_jobs} = 2;
 
+@PGBuild::conf{build_env}->{PG_TEST_EXTRA} = 'ssl kerberos';
+
 push(@{$PGBuild::conf{config_opts}}, (
 	'--enable-tap-tests',
 	'--with-llvm',
