--- a/autoconf.conf
+++ b/autoconf.conf
@@ -1,7 +1,7 @@
 require 'shared.conf';
 
-$PGBuild::conf{animal} = $ENV{AUTOCONF_ANIMAL} // 'autoconf';
-$PGGBuild::conf{secret} = $ENV{AUTOCONF_SECRET} // $PGBuild::conf{secret};
+$PGBuild::conf{animal} = $ENV{ANIMAL} // 'autoconf';
+$PGBuild::conf{secret} = $ENV{SECRET} // $PGBuild::conf{secret};
 
 $PGBuild::conf{make_jobs} = 2;
 
