--- a/meson.conf
+++ b/meson.conf
@@ -1,7 +1,7 @@
 require 'shared.conf';
 
-$PGBuild::conf{animal} = $ENV{MESON_ANIMAL} // 'meson';
-$PGBuild::conf{secret} = $ENV{MESON_SECRET} // $PGBuild::conf{secret};
+$PGBuild::conf{animal} = $ENV{ANIMAL} // 'meson';
+$PGBuild::conf{secret} = $ENV{SECRET} // $PGBuild::conf{secret};
 
 $PGBuild::conf{using_meson} = true;
 $PGBuild::conf{meson_jobs} = 2;
