Remove --enable-nls instead of passing --disable-nls
This is to prevent the NLS icon from showing up on the buildfarm status page.

Related: https://github.com/PGBuildFarm/server-code/issues/14

--- a/meson.conf
+++ b/meson.conf
@@ -27,7 +27,7 @@ push(@{$PGBuild::conf{meson_opts}}, '-Dlibedit_preferred=true');
 # ld: ../../src/port/libpgport.a(strerror.o): in function `pg_strerror_r':
 # src/port/strerror.c:72:(.text+0x260): undefined reference to `libintl_gettext'
 # ld: src/port/strerror.c:72:(.text+0x2d8): undefined reference to `libintl_gettext'
-push(@{$PGBuild::conf{meson_opts}}, '-Dnls=disabled');
+@{$PGBuild::conf{meson_opts}} = grep {!/-Dnls=enabled/} @{$PGBuild::conf{meson_opts}};
 
 # TODO: Currently failing two tests:
 # initdb/001_initdb
