--- a/autoconf.conf
+++ b/autoconf.conf
@@ -19,7 +19,7 @@ push(@{$PGBuild::conf{config_opts}}, (
 # ld: ../../src/port/libpgport.a(strerror.o): in function `pg_strerror_r':
 # src/port/strerror.c:72:(.text+0x260): undefined reference to `libintl_gettext'
 # ld: src/port/strerror.c:72:(.text+0x2d8): undefined reference to `libintl_gettext'
-push(@{$PGBuild::conf{config_opts}}, "--disable-nls");
+@{$PGBuild::conf{config_opts}} = grep {!/--enable-nls/} @{$PGBuild::conf{config_opts}};
 
 # TODO: Currently failing two tests:
 # initdb/001_initdb
