Add -Ddebug=true to meson build

--- a/meson.conf
+++ b/meson.conf
@@ -7,10 +7,11 @@ $PGBuild::conf{using_meson} = true;
 $PGBuild::conf{meson_jobs} = 2;
 
 push(@{$PGBuild::conf{meson_opts}}, (
-	'-Dlz4=enabled',
-	'-Dllvm=enabled',
-	'-Dpam=enabled',
 	'-DPG_TEST_EXTRA=ssl kerberos',
+	'-Ddebug=true',
+	'-Dllvm=enabled',
+	'-Dlz4=enabled',
+	'-Dpam=enabled',
 	'-Dtap_tests=enabled',
 	'-Duuid=ossp',
 	'-Dzstd=enabled'
