--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -60,6 +60,7 @@ jobs:
             -v ./source:/mnt/source \
             -u "$(id -u):$(id -g)" \
             buildfarm-client:alpine \
+              --force \
               --config ${{ matrix.builder }}.conf \
               ${{ matrix.branch }}
       - uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
