--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,11 +36,14 @@ jobs:
         with:
           repository: postgres/postgres
           path: source
+      - id: postgres
+        run: echo "commit=$(git -C source rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
       - uses: actions/cache/restore@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         id: restore-cache
         with:
           path: build
-          key: test-alpine-${{ matrix.builder }}
+          key: test-alpine-${{ matrix.builder }}-${{ steps.postgres.outputs.commit }}
+          restore-keys: test-alpine-${{ matrix.builder }}-
       - name: Test ${{ matrix.builder }}.conf
         run: |
           mkdir -p build
@@ -61,3 +64,4 @@ jobs:
         if: github.ref == 'refs/heads/main'
         with:
           path: build
+          key: test-alpine-${{ matrix.builder }}-${{ steps.postgres.outputs.commit }}
