--- a/shared.conf
+++ b/shared.conf
@@ -14,4 +14,7 @@ $PGBuild::conf{mail_eventsalerts} = {
 	all => [$ENV{BUILDFARM_EMAIL_ALL}]
 };
 
+$PGBuild::conf{build_env}->{CLANG} = $ENV{CLANG};
+$PGBuild::conf{build_env}->{LLVM_CONFIG} = $ENV{LLVM_CONFIG};
+
 1;
