Build with libcurl and OAuth support

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -5,7 +5,7 @@ $PGBuild::conf{secret} = $ENV{SECRET} // $PGBuild::conf{secret};
 
 $PGBuild::conf{make_jobs} = 2;
 
-@PGBuild::conf{build_env}->{PG_TEST_EXTRA} = 'ssl kerberos ldap';
+@PGBuild::conf{build_env}->{PG_TEST_EXTRA} = 'ssl kerberos ldap oauth';
 
 push(@{$PGBuild::conf{config_opts}}, (
 	'--enable-tap-tests',
@@ -14,6 +14,10 @@ push(@{$PGBuild::conf{config_opts}}, (
 	'--with-ssl=openssl',
 	'--with-uuid=ossp'
 ));
+
+if ($branch eq 'HEAD' || $branch ge 'REL_18') {
+	push(@{$PGBuild::conf{meson_opts}}, '--with-libcurl');
+}
 
 # TODO: Building with --enable-nls currently fails with:
 # ld: ../../src/port/libpgport.a(strerror.o): in function `pg_strerror_r':
