--- a/meson.conf
+++ b/meson.conf
@@ -7,7 +7,7 @@ $PGBuild::conf{using_meson} = true;
 $PGBuild::conf{meson_jobs} = 2;
 
 push(@{$PGBuild::conf{meson_opts}}, (
-	'-DPG_TEST_EXTRA=ssl kerberos ldap',
+	'-DPG_TEST_EXTRA=ssl kerberos ldap oauth',
 	'-Ddebug=true',
 	'-Dllvm=enabled',
 	'-Dlz4=enabled',
@@ -16,6 +16,10 @@ push(@{$PGBuild::conf{meson_opts}}, (
 	'-Duuid=ossp',
 	'-Dzstd=enabled'
 ));
+
+if ($branch eq 'HEAD' || $branch ge 'REL_18') {
+	push(@{$PGBuild::conf{meson_opts}}, '-Dlibcurl=enabled');
+}
 
 $PGBuild::conf{build_env}->{LD_PRELOAD} = $ENV{LD_PRELOAD};
 $PGBuild::conf{build_env}->{NSS_WRAPPER_PASSWD} = $ENV{NSS_WRAPPER_PASSWD};
