Enable building with cURL properly

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -15,7 +15,7 @@ push(@{$PGBuild::conf{config_opts}}, (
 	'--with-uuid=ossp'
 ));
 
-if ($branch eq 'HEAD' || $branch ge 'REL_18') {
+if ($PGBuild::branch eq 'HEAD' || $PGBuild::branch ge 'REL_18') {
 	push(@{$PGBuild::conf{meson_opts}}, '--with-libcurl');
 }
 
