--- a/meson.conf
+++ b/meson.conf
@@ -17,7 +17,7 @@ push(@{$PGBuild::conf{meson_opts}}, (
 	'-Dzstd=enabled'
 ));
 
-if ($branch eq 'HEAD' || $branch ge 'REL_18') {
+if ($PGBuild::branch eq 'HEAD' || $PGBuild::branch ge 'REL_18') {
 	push(@{$PGBuild::conf{meson_opts}}, '-Dlibcurl=enabled');
 }
 
