Fix curl for autoconf

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -16,7 +16,7 @@ push(@{$PGBuild::conf{config_opts}}, (
 ));
 
 if ($branch eq 'HEAD' || $branch ge 'REL_18') {
-	push(@{$PGBuild::conf{meson_opts}}, '--with-libcurl');
+	push(@{$PGBuild::conf{config_opts}}, '--with-libcurl');
 }
 
 # TODO: Building with --enable-nls currently fails with:
