Enable injection points

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -15,6 +15,12 @@ push(@{$PGBuild::conf{config_opts}}, (
 	'--with-uuid=ossp'
 ));
 
+if ($branch eq 'HEAD' || $branch ge 'REL_17') {
+	push(@{$PGBuild::conf{config_opts}}, (
+		'--enable-injection-points'
+	));
+}
+
 if ($branch eq 'HEAD' || $branch ge 'REL_18') {
 	push(@{$PGBuild::conf{config_opts}}, (
 		'--with-libcurl',
