--- a/meson.conf
+++ b/meson.conf
@@ -17,6 +17,12 @@ push(@{$PGBuild::conf{meson_opts}}, (
 	'-Dzstd=enabled'
 ));
 
+if ($branch eq 'HEAD' || $branch ge 'REL_17') {
+	push(@{$PGBuild::conf{meson_opts}}, (
+		'-Dinjection_points=true'
+	));
+}
+
 if ($branch eq 'HEAD' || $branch ge 'REL_18') {
 	push(@{$PGBuild::conf{meson_opts}}, (
 		'-Dlibcurl=enabled',
