Enable more TAP tests

--- a/meson.conf
+++ b/meson.conf
@@ -7,7 +7,7 @@ $PGBuild::conf{using_meson} = true;
 $PGBuild::conf{meson_jobs} = 2;
 
 push(@{$PGBuild::conf{meson_opts}}, (
-	'-DPG_TEST_EXTRA=ssl kerberos ldap oauth',
+	'-DPG_TEST_EXTRA=ssl kerberos ldap oauth libpq_encryption load_balance',
 	'-Ddebug=true',
 	'-Dllvm=enabled',
 	'-Dlz4=enabled',
