--- a/autoconf.conf
+++ b/autoconf.conf
@@ -9,6 +9,7 @@ $PGBuild::conf{make_jobs} = 2;
 
 push(@{$PGBuild::conf{config_opts}}, (
 	'--enable-tap-tests',
+	'--with-liburing',
 	'--with-llvm',
 	'--with-pam',
 	'--with-ssl=openssl',
