--- a/meson.conf
+++ b/meson.conf
@@ -9,6 +9,7 @@ $PGBuild::conf{meson_jobs} = 2;
 push(@{$PGBuild::conf{meson_opts}}, (
 	'-DPG_TEST_EXTRA=ssl kerberos ldap oauth libpq_encryption load_balance',
 	'-Ddebug=true',
+	'-Dliburing=enabled',
 	'-Dllvm=enabled',
 	'-Dlz4=enabled',
 	'-Dpam=enabled',
