--- a/autoconf.conf
+++ b/autoconf.conf
@@ -18,6 +18,7 @@ push(@{$PGBuild::conf{config_opts}}, (
 if ($branch eq 'HEAD' || $branch ge 'REL_18') {
 	push(@{$PGBuild::conf{config_opts}}, (
 		'--with-libcurl',
+		'--with-libnuma',
 		'--with-liburing'
 	));
 }
