--- a/meson.conf
+++ b/meson.conf
@@ -20,6 +20,7 @@ push(@{$PGBuild::conf{meson_opts}}, (
 if ($branch eq 'HEAD' || $branch ge 'REL_18') {
 	push(@{$PGBuild::conf{meson_opts}}, (
 		'-Dlibcurl=enabled',
+		'-Dlibnuma=enabled',
 		'-Dliburing=enabled'
 	));
 }
