Only enable liburing for 18+

--- a/autoconf.conf
+++ b/autoconf.conf
@@ -9,7 +9,6 @@ $PGBuild::conf{make_jobs} = 2;
 
 push(@{$PGBuild::conf{config_opts}}, (
 	'--enable-tap-tests',
-	'--with-liburing',
 	'--with-llvm',
 	'--with-pam',
 	'--with-ssl=openssl',
@@ -17,7 +16,10 @@ push(@{$PGBuild::conf{config_opts}}, (
 ));
 
 if ($branch eq 'HEAD' || $branch ge 'REL_18') {
-	push(@{$PGBuild::conf{config_opts}}, '--with-libcurl');
+	push(@{$PGBuild::conf{config_opts}}, (
+		'--with-libcurl',
+		'--with-liburing'
+	));
 }
 
 # TODO: Building with --enable-nls currently fails with:
