--- a/meson.conf
+++ b/meson.conf
@@ -9,7 +9,6 @@ $PGBuild::conf{meson_jobs} = 2;
 push(@{$PGBuild::conf{meson_opts}}, (
 	'-DPG_TEST_EXTRA=ssl kerberos ldap oauth libpq_encryption load_balance',
 	'-Ddebug=true',
-	'-Dliburing=enabled',
 	'-Dllvm=enabled',
 	'-Dlz4=enabled',
 	'-Dpam=enabled',
@@ -19,7 +18,10 @@ push(@{$PGBuild::conf{meson_opts}}, (
 ));
 
 if ($branch eq 'HEAD' || $branch ge 'REL_18') {
-	push(@{$PGBuild::conf{meson_opts}}, '-Dlibcurl=enabled');
+	push(@{$PGBuild::conf{meson_opts}}, (
+		'-Dlibcurl=enabled',
+		'-Dliburing=enabled'
+	));
 }
 
 $PGBuild::conf{build_env}->{LD_PRELOAD} = $ENV{LD_PRELOAD};
