--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -21,12 +21,15 @@ jobs:
           - REL_15_STABLE
           - REL_16_STABLE
           - REL_17_STABLE
+          - REL_18_STABLE
           - HEAD
         include:
           - builder: meson
             branch: REL_16_STABLE
           - builder: meson
             branch: REL_17_STABLE
+          - builder: meson
+            branch: REL_18_STABLE
           - builder: meson
             branch: HEAD
     name: ${{ matrix.branch }} (${{ matrix.builder }})
